fix(SnakeBoard): overflow hidden in board

--- a/portfolio/styles/SnakeBoard.module.css
+++ b/portfolio/styles/SnakeBoard.module.css
@@ -2,6 +2,7 @@
     position: relative;
     margin: auto;
     border-style: solid;
+    overflow: hidden;
 }
 
 .chunk {
